# Creditra-Contracts

./: ALLOWLIST_IMPLEMENTATION.md  Cargo.toml  EVENT_SCHEMA.md  INVARIANTS.md  ISSUE_241_STATUS.md  PR_SUMMARY.md  PR_VAULT_UPGRADE.md  README.md  SECURITY.md  SETTLEMENT_IMPLEMENTATION.md  STORAGE_KEY_ENCODING_DIAGRAMS.md  STORAGE_KEY_ENCODING_SUMMARY.md  UPGRADE.md  VAULT_ERROR_IMPLEMENTATION.md  VAULT_WITHDRAW_COMPLIANCE.md
contracts/credit/: AUDIT_SUMMARY.md  ERROR_HANDLING_MIGRATION_GUIDE.md  POST_AUDIT_CHECKLIST.md  UNWRAP_AUDIT_REPORT.md
contracts/credit/fuzz/: Cargo.toml
contracts/credit/fuzz/fuzz_targets/: oracle_deviation.rs
contracts/credit/src/: accrual.rs  auth.rs  events.rs  lib.rs  lifecycle.rs  math_utils.rs  risk.rs  storage.rs  types.rs
contracts/credit/tests/: STORAGE_KEY_SAFETY_DOCUMENTATION.md  borrower_key_encoding.rs  borrower_rate_floor.rs  default_liquidation_settled_event.rs  error_discriminants.rs  event_topic_stability.rs  protocol_fee.rs  unauthorized_matrix.rs
contracts/revenue_pool/: BATCH_TRANSFER_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md
contracts/revenue_pool/src/: lib.rs  test.rs
contracts/settlement/src/: lib.rs  test.rs  test_views.rs
contracts/vault/: ACCESS_CONTROL.md
contracts/vault/src/: lib.rs  test.rs  test_init_hardening.rs  test_setter_validation.rs  test_views.rs
coverage/: cobertura.xml  tarpaulin-report.html
docs/: ACCESS_CONTROL.md  threat-model.md
docs/interfaces/: revenue_pool.json  settlement.json  vault.json
scripts/: coverage.sh
(+2 files in other folders)
