[package]
name = "creditra-credit-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.creditra-credit]
path = "../.."

# Prevent this from interfering with workspaces
[workspace]

[[bin]]
name = "oracle_deviation"
path = "fuzz_targets/oracle_deviation.rs"
doc = false
